# report_task_backend

./: .env.template  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  start-development.sh  start.sh
deploy/: nginx.template.conf
identity/: admin.py  models.py  urls.py
identity/migrations/: 0001_initial.py
referential/: admin.py  models.py  serializers.py  views.py
referential/migrations/: 0001_initial.py  0002_alter_delivery_options.py  0003_delivery_comment_delivery_fio.py
server/: exceptions.py  settings.py  urls.py
